[package]
name = "leaktracer"
version = "0.1.4"
edition = "2024"
include = ["src/**/*", "examples/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
homepage = "https://github.com/veeso/leaktracer"
description = "A Rust allocator to trace memory allocations in Rust programs, by intercepting the allocations."
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
license = "MIT"
repository = "https://github.com/veeso/leaktracer"
readme = "README.md"
keywords = ["memory", "allocator", "leak", "trace", "debug"]
categories = [
  "development-tools::debugging",
  "development-tools",
  "memory-management",
]

[dependencies]
backtrace = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "tracing"
path = "examples/tracing.rs"
